# klick

./: .gitignore  .woodpecker.yaml  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  build.rs  flake.nix  justfile  shell.nix  trunk.nix
backend/: Cargo.toml
backend/src/: lib.rs
boundary/: Cargo.toml
boundary/src/: conversion.rs  export.rs  import.rs  input.rs  lib.rs  output.rs  scenario.rs  v2.rs
boundary/src/import/: migrate.rs  mod.rs  v1.rs
boundary/tests/: example_data_v1.json  example_data_v2.json  example_data_v3.json  export.rs  import.rs
crates/app-api/: Cargo.toml
crates/app-api/src/: lib.rs
crates/app-components/: Cargo.toml
crates/app-components/src/: icons.rs  lib.rs  links.rs  message.rs
crates/app-components/src/forms/: mod.rs  rendering.rs
crates/application/: Cargo.toml
crates/application-services/: Cargo.toml
crates/application-services/src/authentication/: confirm_email_address.rs  create_account.rs  delete_expired_account_tokens.rs  refresh_account_token.rs  request_password_reset.rs  resend_confirmation_email.rs  reset_password.rs  send_confirmation_email.rs
crates/application-services/src/projects/: mod.rs
crates/application/src/: calculation.rs  constants.rs  input.rs  lib.rs  output.rs  scenario.rs  tests.rs
crates/application/src/calculation/: emission_groups.rs  mod.rs  tests.rs
crates/application/src/gateways/: mod.rs  notification.rs
crates/application/src/repositories/: account.rs  account_token.rs  mod.rs  project.rs  user.rs
crates/application/src/units/: mod.rs
crates/application/src/usecases/: calculation.rs  confirm_email_address.rs  create_account.rs  create_user.rs  login.rs  mod.rs  refresh_account_token.rs  request_password_reset.rs  resend_confirmation_email.rs  reset_password.rs  send_confirmation_email.rs
crates/backend/: Cargo.toml
crates/backend/src/: adapters.rs  application.rs  config.rs  example-config.toml  lib.rs  notification_gateway.rs
crates/backend/tests/: json_api.rs  unsaved_example_project.json  unsaved_example_project_v5.json  unsaved_example_project_v6.json
crates/boundary/: Cargo.toml
crates/boundary/src/: calculation.rs  conversion.rs  default_values.rs  export.rs  json_api.rs  lib.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
crates/boundary/src/import/: migrate.rs  mod.rs
crates/boundary/src/json_api/: axum.rs  login.rs  mod.rs  register.rs
crates/boundary/src/v8/: mod.rs  optimization_scenario.rs  plant_profile.rs  sensitivity_parameters.rs
crates/boundary/tests/: conversion.rs  example_data_v1.json  example_data_v2.json  example_data_v3.json  example_data_v4.json  example_data_v5.json  example_data_v6.json  example_data_v7.json  example_data_v8.json  example_data_v9.json  export.rs  import.rs
crates/codemirror/: Cargo.toml
crates/codemirror/examples/basic/: Cargo.toml  index.html
crates/codemirror/src/: lib.rs
crates/custom-values-parser/: Cargo.toml
crates/custom-values-parser/src/: lib.rs  tests.rs
crates/db-sqlite/: Cargo.toml
crates/db-sqlite/migrations/2024-01-06-000000_initial/: up.sql
crates/db-sqlite/migrations/2024-01-13-000000_initial/: up.sql
crates/db-sqlite/migrations/2024-01-21-000000_projects/: up.sql
crates/db-sqlite/migrations/2024-01-24-000000_account_creation_date/: up.sql
crates/db-sqlite/src/: connection.rs  lib.rs  schema.rs
crates/db-sqlite/src/account/: mod.rs  models.rs  queries.rs  schema.rs
crates/db-sqlite/src/account_token/: models.rs  queries.rs
crates/db-sqlite/src/project/: mod.rs  models.rs  queries.rs
crates/db-sqlite/src/user/: models.rs  queries.rs  schema.rs
crates/db-sqlite/tests/: accounts.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  co2_equivalents.rs  constants.rs  email.rs  email_address.rs  emission_factors.rs  emission_influencing_values.rs  lib.rs  nonce.rs  optimization_scenario.rs  plant_profile.rs  project.rs  specs.rs  user.rs  values.rs
crates/domain/src/authentication/: account.rs  nonce.rs  password.rs
crates/domain/src/calculation/: emission_groups.rs  mod.rs  tests.rs
crates/domain/src/units/: conversion.rs  mod.rs  tests.rs
crates/domain/src/values/: calculation_outcome.rs  co2_equivalents.rs  emission_factors.rs  emission_influencing_values.rs  mod.rs  report.rs  specs.rs  value_ids.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: lib.rs
crates/interfaces/src/presenters/: mod.rs  table.rs  value_group.rs
crates/interfaces/src/repositories/: mod.rs
crates/pdf-export/: Cargo.toml
crates/pdf-export/examples/: main.rs
crates/pdf-export/src/: lib.rs
crates/pdf-export/templates/: report.md.template  table.tex.template
crates/presenter/: Cargo.toml
crates/presenter/src/: bar_chart.rs  csv.rs  language.rs  lib.rs  sankey_chart.rs  tables.rs  tests.rs  value_color.rs  value_ids.rs  value_input_field.rs  value_labels.rs  value_metadata.rs  value_units.rs
crates/usecases/: Cargo.toml
crates/usecases/src/: calculate_all_ch4_chp_emission_factor_scenarios.rs  calculate_all_n2o_emission_factor_scenarios.rs  calculate_ch4_chp.rs  calculate_emissions.rs  calculate_profile.rs  calculate_recommendation.rs  calculate_sensitivity.rs  emission_groups.rs  lib.rs
crates/value/: Cargo.toml
crates/value/src/: lib.rs  specs.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/content/: about.md  footer.md  imprint.md  open-source.md
frontend/content/de/: about.md  faq.md  footer.md  imprint.md
frontend/content/en/: about.md  faq.md  footer.md  imprint.md  open-source.md
frontend/locales/de/: main.ftl  nav.ftl
frontend/locales/en/: main.ftl  nav.ftl
frontend/src/: api.rs  credentials.rs  footer.rs  forms.rs  i18n.rs  imprint.rs  lib.rs  main.rs  message.rs  nav.rs  sankey.rs  style.css
frontend/src/forms/: mod.rs  rendering.rs
frontend/src/pages/: confirm_email_address.rs  documentation.rs  faq.rs  home.rs  login.rs  mod.rs  register.rs  reset_password.rs  reset_password_request.rs  tool.rs
frontend/tests/: value_ids.rs
(+141 files in other folders)
