[workspace]
members = [
  "crates/application",
  "crates/backend",
  "crates/boundary",
  "crates/components",
  "crates/db-sqlite",
  "crates/domain",
  "crates/presenter",
  "crates/svg-charts",
  "crates/svg-charts/examples/*"
]
exclude = ["frontend"]
resolver = "2"

[workspace.package]
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "AGPL-3.0-or-later"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"

[patch.crates-io]
# Local paths to library crates in workspace
klick-application     = { path = "crates/application"     }
klick-backend         = { path = "crates/backend"         }
klick-boundary        = { path = "crates/boundary"        }
klick-components      = { path = "crates/components"      }
klick-db-sqlite       = { path = "crates/db-sqlite"       }
klick-domain          = { path = "crates/domain"          }
klick-presenter       = { path = "crates/presenter"       }
klick-svg-charts      = { path = "crates/svg-charts"      }

[package]
name = "klick"
version = "0.3.8"
edition.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
# Project dependencies
klick-backend = "=0.0.0"

# External dependencies
anyhow = "1.0.79"
env_logger = "0.11.1"
log = "0.4.20"

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
toml = "0.8.9"

[workspace.lints.clippy]
pedantic = "warn"
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# This is a matter of taste... and I just like it that way ;-P
mod_module_files = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
