[workspace]
members = [
  # frontent crates
  "crates/app-api",
  "crates/app-charts",
  "crates/app-charts/examples/*",
  "crates/app-components",

  # backend crates
  "crates/backend",
  "crates/db-sqlite",
  "crates/pdf-export",

  # shared crates
  "crates/application",
  "crates/boundary",
  "crates/domain",
  "crates/presenter"
]
exclude = ["frontend"]
resolver = "2"

[workspace.package]
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "AGPL-3.0-or-later"
version = "0.4.11"
edition = "2021"
rust-version = "1.79"
description = "Calculate the carbon footprints for wastewater treatment plants"

[patch.crates-io]
# Local paths to library crates in workspace
klick-app-api        = { path = "crates/app-api"        }
klick-app-charts     = { path = "crates/app-charts"     }
klick-app-components = { path = "crates/app-components" }
klick-application    = { path = "crates/application"    }
klick-backend        = { path = "crates/backend"        }
klick-boundary       = { path = "crates/boundary"       }
klick-db-sqlite      = { path = "crates/db-sqlite"      }
klick-domain         = { path = "crates/domain"         }
klick-pdf-export     = { path = "crates/pdf-export"     }
klick-presenter      = { path = "crates/presenter"      }

[package]
name = "klick"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
# Project dependencies
klick-backend = "=0.0.0"

# External dependencies
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.22"

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
toml = "0.8.14"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# This is a matter of taste... and I just like it that way ;-P
mod_module_files = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
