[workspace]
members = [
  # core crates
  "crates/domain",
  "crates/usecases",
  "crates/value-spec-proc-macro",

  # frontent crates
  "crates/app-api",
  "crates/app-charts",
  "crates/app-charts/examples/*",
  "crates/app-components",
  "crates/codemirror",
  "crates/codemirror/examples/*",
  "crates/custom-values-parser",

  # backend crates
  "crates/application-services",
  "crates/backend",
  "crates/db-sqlite",
  "crates/pdf-export",
  "crates/interfaces",

  # shared crates
  "crates/boundary",
  "crates/presenter",
]
exclude = ["frontend"]
resolver = "2"

[workspace.package]
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "AGPL-3.0-or-later"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
description = "Calculate the carbon footprints for wastewater treatment plants"

[patch.crates-io]
# Local paths to library crates in workspace
klick-app-api               = { path = "crates/app-api"               }
klick-app-charts            = { path = "crates/app-charts"            }
klick-app-components        = { path = "crates/app-components"        }
klick-application-services  = { path = "crates/application-services"  }
klick-backend               = { path = "crates/backend"               }
klick-boundary              = { path = "crates/boundary"              }
klick-codemirror            = { path = "crates/codemirror"            }
klick-custom-values-parser  = { path = "crates/custom-values-parser"  }
klick-db-sqlite             = { path = "crates/db-sqlite"             }
klick-domain                = { path = "crates/domain"                }
klick-interfaces            = { path = "crates/interfaces"            }
klick-pdf-export            = { path = "crates/pdf-export"            }
klick-presenter             = { path = "crates/presenter"             }
klick-usecases              = { path = "crates/usecases"              }
klick-value-spec-proc-macro = { path = "crates/value-spec-proc-macro" }

[package]
name = "klick"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
# Project dependencies
klick-backend = "=0.0.0"

# External dependencies
anyhow = "1.0.89"
env_logger = "0.11.5"
log = "0.4.22"

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
toml = "0.8.19"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# This is a matter of taste... and I just like it that way ;-P
mod_module_files = "allow"

# In general, wildcard imports should be avoided
# but since we are using the `leptos` framework,
# it is quite common to import a prelude.
wildcard_imports = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
