[package]
name = "klick-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Project dependencies
klick-application = "=0.0.0"
klick-boundary = "=0.0.0"

# External dependencies
anyhow = "1.0.75"
axum = "0.6.20"
charming = "0.2.4"
log = "0.4.20"
mime_guess = "2.0.4"
rust-embed = { version = "8.0.0", features = ["axum"] }
