[package]
name = "klick-boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }

[dependencies.klick-application]
version = "=0.0.0"
optional = true

[features]
conversion = ["dep:klick-application"]

[lints]
workspace = true
