[package]
name = "klick-boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"

[dependencies.klick-application]
version = "=0.0.0"
optional = true

[dev-dependencies.klick-boundary]
version = "*"
features = ["extra-derive"]

[features]
conversion = ["dep:klick-application"]
extra-derive = []

[lints]
workspace = true
