[package]
name = "klick-frontend"
version = "0.4.13"
edition = "2021"
publish = false
rust-version = "1.80"

[dependencies]
# Project dependencies
klick-app-api = "=0.0.0"
klick-app-charts = "=0.0.0"
klick-app-components = "=0.0.0"
klick-boundary = { version = "=0.0.0", features = ["conversion", "extra-derive"] }
klick-domain = { path = "../crates/domain" }
klick-presenter = "=0.0.0"

# External dependencies
chrono = "0.4"
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
derive_more = "1.0.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-storage = "0.3.0"
js-sys = "0.3.70"
leptos = { version = "0.6.13", features = ["csr"] }
leptos_meta = { version = "0.6.13", features = ["csr"] }
leptos_router = { version = "0.6.13", features = ["csr"] }
log = "0.4.22"
num-traits = "0.2.19"
pulldown-cmark = "0.11.0"
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
strum = "0.26.3"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "formatting"] }
leptos_hotkeys = "0.2.2"

[patch.crates-io]
# Local paths to library crates in workspace
klick-app-api        = { path = "../crates/app-api"        }
klick-app-components = { path = "../crates/app-components" }
klick-app-charts     = { path = "../crates/app-charts"     }
klick-boundary       = { path = "../crates/boundary"       }
klick-domain         = { path = "../crates/domain"         }
klick-presenter      = { path = "../crates/presenter"      }
klick-value-spec     = { path = "../crates/value-spec"     }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# This is a matter of taste... and I just like it that way ;-P
mod_module_files = "allow"

# Allow leptos #[component] to create empty docs
empty_docs = "allow"

# In general, wildcard imports should be avoided
# but since we are using the `leptos` framework,
# it is quite common to import a prelude.
wildcard_imports = "allow"

[build-dependencies]
toml = "0.8.19"
