[package]
name = "klick-frontend"
version = "0.4.13"
edition = "2021"
publish = false
rust-version = "1.80"

[dependencies]
# Project dependencies
klick-app-api = "=0.0.0"
klick-app-charts = "=0.0.0"
klick-app-components = "=0.0.0"
klick-boundary = { version = "=0.0.0", features = ["conversion"] }
klick-codemirror = "=0.0.0"
klick-custom-values-parser = "=0.0.0"
klick-domain = { path = "../crates/domain" }
klick-presenter = "=0.0.0"

# External dependencies
chrono = "0.4"
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
derive_more = "1.0.0"
fluent-templates = { version = "0.10.1",  features = ["macros", "walkdir"] }
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", default-features = false, features = ["json", "http"] }
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
js-sys = "0.3.70"
leptos = { version = "0.6.14", features = ["csr"] }
leptos-fluent = { version = "0.1.21", default-features = false }
leptos_hotkeys = "0.2.2"
leptos_meta = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
log = "0.4.22"
num-traits = "0.2.19"
regex = "1.10.6" # TODO: remove
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "formatting"] }

[patch.crates-io]
# Local paths to library crates in workspace
klick-app-api              = { path = "../crates/app-api"              }
klick-app-components       = { path = "../crates/app-components"       }
klick-app-charts           = { path = "../crates/app-charts"           }
klick-boundary             = { path = "../crates/boundary"             }
klick-codemirror           = { path = "../crates/codemirror"           }
klick-domain               = { path = "../crates/domain"               }
klick-presenter            = { path = "../crates/presenter"            }
klick-value                = { path = "../crates/value"                }
klick-value-spec           = { path = "../crates/value-spec"           }
klick-custom-values-parser = { path = "../crates/custom-values-parser" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# This is a matter of taste... and I just like it that way ;-P
mod_module_files = "allow"

# Allow leptos #[component] to create empty docs
empty_docs = "allow"

# In general, wildcard imports should be avoided
# but since we are using the `leptos` framework,
# it is quite common to import a prelude.
wildcard_imports = "allow"

[build-dependencies]
pulldown-cmark = "0.12.0"
toml = "0.8.19"
walkdir = "2.5.0"
