[package]
name = "klick-app-api"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-boundary = "=0.0.0"

log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"

[dependencies.gloo-net]
version = "0.5.0"
default-features = false
features = ["http", "json"]

[lints]
workspace = true
