[package]
name = "klick-app-api"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-boundary = { version = "=0.0.0", features =  ["conversion"] }
klick-domain = { path = "../domain" }

log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"

[dependencies.gloo-net]
version = "0.6.0"
default-features = false
features = ["http", "json"]

[lints]
workspace = true
