[package]
name = "klick-app-components"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-presenter = "=0.0.0"

Inflector = { version =  "0.11.4", default-features = false }
leptos = { version = "0.6.9", features = ["csr"] }
log = "0.4.21"

[lints]
workspace = true
