[package]
name = "klick-app-components"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-presenter = "=0.0.0"

derive_more = "0.99.18"
leptos = { version = "0.6.13", features = ["csr"] }
log = "0.4.22"
thiserror = "1.0.63"

[lints]
workspace = true
