[package]
name = "klick-application-services"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-domain = { path = "../domain" }
klick-interfaces = "=0.0.0"

anyhow = "1.0.89"
log = "0.4.22"
thiserror = "1.0.63"
time = "0.3.36"

[lints]
workspace = true
