[package]
name = "klick-application"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-domain = { path = "../domain" }

anyhow = "1.0.80"
log = "0.4.20"
thiserror = "1.0.57"
time = "0.3.34"

[lints]
workspace = true
