[package]
name = "klick-application"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-domain = { path = "../domain" }

anyhow = "1.0.82"
log = "0.4.21"
thiserror = "1.0.58"
time = "0.3.36"

[lints]
workspace = true
