[package]
name = "klick-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Project dependencies
klick-application = "=0.0.0"
klick-app-charts = "=0.0.0"
klick-boundary = { version = "=0.0.0", features = ["axum"] }
klick-db-sqlite = "=0.0.0"
klick-domain = "=0.0.0"

# External dependencies
anyhow = "1.0.79"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
headers = "0.4.0"
lettre = { version = "0.11.4", default-features = false, features = ["rustls-tls", "builder", "smtp-transport", "pool"] }
log = "0.4.20"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
rust-embed = { version = "8.2.0", features = ["axum"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["net"] }
toml = "0.8.9"
tower-http = { version = "0.5.1", features = ["cors"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0.113"
time = "0.3.32"

[dev-dependencies]
serde_json = "1.0.113"
klick-boundary = { version = "=0.0.0", features = ["axum", "extra-derive"] }

[dev-dependencies.reqwest]
version = "0.11.24"
default-features = false
features = ["rustls", "json"]

[lints]
workspace = true
