[package]
name = "klick-boundary"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
http = "1.1.0"
http-serde = "2.1.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.9.0", features = ["serde"] }

[dependencies.klick-domain]
path = "../domain"

[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["json"]
optional = true

[dev-dependencies]
klick-boundary = { version = "=0.0.0", features = ["extra-derive", "conversion"] }

uuid = { version = "1.9.0", features = ["v4"] }

[features]
conversion = []
extra-derive = []
axum = ["dep:axum"]

[lints]
workspace = true
