[package]
name = "klick-boundary"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.89"
derive_more = "1.0.0"
http = "1.1.0"
http-serde = "2.1.1"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.10.0", features = ["serde"] }

[dependencies.klick-domain]
path = "../domain"

[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["json"]
optional = true

[dev-dependencies]
klick-boundary = { version = "=0.0.0", features = ["conversion"] }

uuid = { version = "1.10.0", features = ["v4"] }

[features]
conversion = []
axum = ["dep:axum"]

[lints]
workspace = true
