[package]
name = "klick-codemirror"
version = "0.0.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
codemirror = "0.2.0"
leptos = { version = "0.6.14" }
log = "0.4.22"

[lints]
workspace = true
