[package]
name = "klick-custom-values-parser"
version = "0.0.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
klick-presenter = { path = "../presenter" }
thiserror = "1.0.63"

[lints]
workspace = true
