[package]
name = "klick-db-sqlite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-application = "=0.0.0"
klick-boundary = { version = "=0.0.0", features = ["conversion"] }
klick-domain = { path = "../domain" }

anyhow = "1.0.81"
diesel = { version = "2.1.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
# Bundle SQLite code to prevent dynamic linking.
# The pinned version must be compatible with diesel! Try to update it
# manually or by `cargo upgrade --pinned` after updating diesel.
libsqlite3-sys = { version = "=0.28.0", features = ["bundled"] }
log = "0.4.21"
parking_lot = "0.12.1"
serde_json = "1.0.114"
thiserror = "1.0.58"
time = "0.3.34"
uuid = "1.7.0"

[dev-dependencies.klick-boundary]
version = "=0.0.0"
features = ["conversion", "extra-derive"]

[lints]
workspace = true
