[package]
name = "klick-db-sqlite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-boundary = { version = "=0.0.0", features = ["conversion"] }
klick-domain = { path = "../domain" }
klick-interfaces = "=0.0.0"

anyhow = "1.0.89"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
# Bundle SQLite code to prevent dynamic linking.
# The pinned version must be compatible with diesel! Try to update it
# manually or by `cargo upgrade --pinned` after updating diesel.
libsqlite3-sys = { version = "=0.28.0", features = ["bundled"] }
log = "0.4.22"
parking_lot = "0.12.3"
thiserror = "1.0.63"
time = "0.3.36"

[dev-dependencies.klick-boundary]
version = "=0.0.0"
features = ["conversion"]

[lints]
workspace = true
