[package]
name = "klick-domain"
description.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
klick-value-spec = "=0.0.0"
anyhow = "1.0.86"
bs58 = "0.5.1"
derive_more = { version = "1.0.0", features = ["from"] }
mailparse = "0.15.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
pwhash = "1.0.0"
thiserror = "1.0.63"
time = "0.3.36"
uuid = { version = "1.10.0", features = ["v4"] }

[lints]
workspace = true
