[package]
name = "klick-interfaces"
version = "0.0.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
klick-domain = { path = "../domain" }

anyhow = "1.0.89"
time = "0.3.36"

[lints]
workspace = true
