[package]
name = "klick-pdf-export"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-app-charts = { version = "=0.0.0", features = ["ssr"] }
klick-boundary = { version = "=0.0.0", features = ["conversion", "extra-derive"] }
klick-domain = { path = "../domain" }
klick-presenter = "=0.0.0"

anyhow = "1.0.80"
lazy_static = "1.4.0"
pandoc = "0.8.11"
serde = { version = "1.0.197", features = ["derive"] }
tera = "1.19.1"
time = { version = "0.3.34", features = ["formatting", "local-offset", "macros"] }
tempfile = "3.10.0"

[dev-dependencies]
klick-boundary = { version = "=0.0.0", features = ["conversion", "extra-derive"] }

[lints]
workspace = true
