[package]
name = "klick-pdf-export"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
klick-app-charts = { version = "=0.0.0", features = ["ssr"] }
klick-boundary = { version = "=0.0.0", features = ["conversion"] }
klick-domain = { path = "../domain" }
klick-presenter = "=0.0.0"

anyhow = "1.0.86"
num-traits = "0.2.19"
pandoc = "0.8.11"
serde = { version = "1.0.209", features = ["derive"] }
tempfile = "3.12.0"
tera = "1.20.0"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
klick-boundary = { version = "=0.0.0", features = ["conversion"] }

[lints]
workspace = true
