[package]
name = "klick-presenter"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
klick-boundary = { version = "=0.0.0", features = ["extra-derive", "conversion"] }
klick-domain = { path = "../domain" }

derive_more = "0.99.18"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
