[package]
name = "klick-presenter"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
klick-boundary = { version = "=0.0.0", features = ["extra-derive", "conversion"] }
klick-domain = { path = "../domain" }

anyhow = "1.0.86"
derive_more = "1.0.0"
serde = { version = "1.0.207", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
