[package]
name = "klick-presenter"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
klick-boundary = { version = "=0.0.0", features = ["conversion"] }
klick-domain = { path = "../domain" }
klick-usecases = "=0.0.0"

anyhow = "1.0.86"
derive_more = "1.0.0"
serde = { version = "1.0.209", features = ["derive"] }
fluent-templates = "0.10.1"

[dev-dependencies]
colored = "2.1.0"
strum = "0.26.3"
