[package]
name = "klick-usecases"
version = "0.0.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
klick-domain = { path = "../domain" }

anyhow = "1.0.89"
log = "0.4.22"

[lints]
workspace = true
