[package]
name = "klick-value"
version = "0.0.0"
publish = false
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
klick-value-spec = "=0.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"

[lints]
workspace = true
