[package]
name = "klick-codemirror-basic"
version.workspace = true
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
leptos = { version = "0.6.15", features = ["csr"] }
klick-codemirror = { path = "../.." }
log = "0.4.22"

[lints]
workspace = true
